<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_step2_main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            app2:civ_border_width="1dp"
            app2:civ_border_color="@color/dark_gray"
            android:layout_marginTop="@dimen/pad9"
            android:background="@color/white2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/ci_register_portrait"
            android:src="@drawable/portrait"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_is_distinct"
            android:textColor="@color/red1"
            android:visibility="invisible"
            android:textSize="@dimen/f21"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad9"
            android:layout_marginLeft="@dimen/pad3"
            android:layout_marginRight="@dimen/pad3"
            android:background="@drawable/corner_round"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spa72"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="2dp"
                    android:text="@string/username"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/f21" />

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/nickname"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/colorhint"
                    android:textSize="@dimen/f21" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spa72"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="2dp"
                    android:text="@string/password"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/f21" />

                <EditText
                    android:id="@+id/et_login_paw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/pass_word_prompt"
                    android:inputType="textPassword"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/colorhint"
                    android:textSize="@dimen/f21" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/linecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spa72"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/pad3"
                    android:layout_marginRight="2dp"
                    android:text="@string/transaction_password"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/f21" />

                <EditText
                    android:id="@+id/et_confirm_paw"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/pass_word_prompt"
                    android:inputType="textPassword"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/colorhint"
                    android:textSize="@dimen/f21" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:layout_marginLeft="@dimen/pad3"
            android:layout_marginRight="@dimen/pad3"
            android:layout_marginTop="@dimen/pad3"
            android:background="@drawable/blue_button_background_selector"
            android:text="@string/register"
            android:textColor="@color/white2"
            android:textSize="@dimen/f21" />
    </LinearLayout>



</LinearLayout>