<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="55dp"
        android:gravity="center" >

        <FrameLayout
            android:layout_below="@+id/iv_portrait"
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:background="@drawable/edit_shape"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_marginTop="5dp"
                android:inputType="number"
                android:hint="@string/please_enter_the_account"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingRight="55dp"
                android:paddingLeft="55dp" >
            </EditText>
            <ImageView
                android:layout_width="22dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/iv_account"
                android:visibility="visible"
                android:layout_marginLeft="8dp" />

            <Button
                android:id="@+id/bt_username_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/bt_clear"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/contry_sn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="+62"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="invisible"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:layout_marginTop="6dp"
            android:gravity="center" >
            <EditText
                android:id="@+id/password"
                android:background="@drawable/edit_shape"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:hint="@string/please_enter_the_password"
                android:paddingRight="60dp"
                android:paddingLeft="60dp" >
            </EditText>

            <Button
                android:id="@+id/bt_pwd_eye"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/eye_close"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/bt_pwd_clear"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/btn_clear"
                android:visibility="invisible"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="33dp"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="22dp"
                android:layout_marginStart="7dp"
                android:layout_gravity="left|center_vertical"
                android:background="@drawable/iv_password"
                android:layout_marginLeft="7dp"
                android:id="@+id/imageView" />
        </FrameLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_below="@id/usercode_layout"
            android:layout_marginTop="30dp"
            android:background="@color/blue"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/login" />
        <Button
            android:id="@+id/login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/login"
            android:layout_below="@id/login"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textSize="16sp" />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/login"
            android:layout_below="@id/login"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:text="@string/register"
            android:textSize="16sp"
            android:visibility="visible" />

        <de.hdodenhof.circleimageview.CircleImageView
            app2:civ_border_width="1dp"
            app2:civ_border_color="@color/dark_gray"
            android:background="@color/white2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/iv_portrait"
            android:src="@drawable/portrait"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>